# tsp_solver_comparison

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
src/domain/: solver.py  utils.py
